kubernetes/mezzanine/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mezzanine
  namespace: legacy-modernization
  labels:
    app: mezzanine
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: mezzanine
